--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Contact Us
         </section>
     </main>
     <footer>
-        <span>Poparcea Nicolae,Cazacu Bogdana,2023</span>
+        <span>Poparcea Nicolae,Covali Miroslav,2023</span>
     </footer>
 
 
